# chess-rs

./: .gitattributes  Cargo.toml  README.md  TODO  build.rs  env.txt
.cargo/: config
src/: board.rs  board2.rs  chess.rs  game.rs  lib.rs  main.rs  piece.rs  piece2.rs  slotvec.rs  utils.rs
ui/: chess.60
ui/chess_set/: example board with pieces.png.import  example pieces only.png.import
ui/chess_set/PNGs/No_shadow/1024h/: b_bishop_png_1024px.png.import  b_king_png_1024px.png.import  b_knight_png_1024px.png.import  (+12 more)
ui/chess_set/SVG No shadow/: b_bishop_svg_NoShadow.svg.import  b_king_svg_NoShadow.svg.import  b_knight_svg_NoShadow.svg.import  b_pawn_svg_NoShadow.svg.import  b_queen_svg_NoShadow.svg.import  b_rook_svg_NoShadow.svg.import  w_bishop_svg_NoShadow.svg.import  w_king_svg_NoShadow.svg.import  w_knight_svg_NoShadow.svg.import  w_pawn_svg_NoShadow.svg.import  w_queen_svg_NoShadow.svg.import  w_rook_svg_NoShadow.svg.import
ui/chess_set/SVG with shadow/: b_bishop_svg_withShadow.svg.import  b_king_svg_withShadow.svg.import  b_knight_svg_withShadow.svg.import  b_pawn_svg_withShadow.svg.import  b_queen_svg_withShadow.svg.import  b_rook_svg_withShadow.svg.import  w_bishop_svg_withShadow.svg.import  w_king_svg_withShadow.svg.import  w_knight_svg_withShadow.svg.import  w_pawn_svg_withShadow.svg.import  w_queen_svg_withShadow.svg.import  w_rook_svg_withShadow.svg.import
ui/chess_set/board squares/: square brown dark_svg.svg.import  square brown light_svg.svg.import  square gray dark _svg.svg.import  square gray light _svg.svg.import
ui/sounds/: attributions.txt
(+173 files in other folders)
