[package]
name = "chess"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
#gdnative = "0.9.3"
termcolor = "1.1.2"
# sixtyfps = "0.1.5"
sfml = "0.16.0"
#ux = "0.1.3"

# [build-dependencies]
# sixtyfps-build = "0.1.5"

#[lib]
#crate-type = ["cdylib"]
